# speedometer

./: Cargo.toml  README.md  update_speed.sh
assets/: speedometer.raw
src/: main.rs
