[package]
name = "speedometer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
embedded-graphics = "0.8.1"
gc9a01-rs = "0.1.0"
profont = "0.7.0"
rppal = { version = "0.17.0", features = ["hal"] }


[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false